--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,22 +1,10 @@
-main: com.gmail.ak1cec0ld.plugins.pokemonids.PokemonIDs
-name: PokemonIDs
+main: com.gmail.ak1cec0ld.plugins.pokemobmoney.PokeMobMoney
+name: PokeMobMoney
 api-version: 1.13
-version: 2.0.0
+version: 1.0.0
 author: 1cec0ld
 description: No Description
-prefix: PIDs
+prefix: PMM
 commands:
-  fly:
-    description: Helps you fly.
-  badges:
-    description: Helps manage your badges.
-  pokemonids:
-    description: Manages PokemonIDs the plugin
-  houses:
-    description: Show the Key and List all houses.
-  wild:
-    description: Bring you to your wild location, unique to you.
-  spawn:
-    description: Bring yourself or others to the start of their region.
-  pvp:
-    description: Brings you to a location known to cause Player Vs Player combat
+  togglemoneymessages:
+    description: Change between seeing money notices in Chat vs Action Bar
